modified index file and added images file with no css

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
    <button onclick="
         playGame('Heads');
-      ">Heads</button>
+      "><img src="images/heads.jpg" alt=""></button>
 
        
 
    <button onclick="
         playGame('Tails');
-   ">Tails</button>
+   "><img src="images/tails.jpg" alt=""></button>
 
 
 
